# cppzip

./: .clang-format  .gitignore  .ycm_extra_conf.py  LICENSE  meson.build
include/: central_directory_file_header.h  digital_signature.h  end_of_central_directory_record.h  helper.h  local_file_header.h  zip_functions.h
interface/cppzip/: zip_archive.h  zip_entry.h
interface/cppzip/v1/: zip_archive.h  zip_entry.h
src/: main.cpp
src/cppzip/v1/: zip_archive.cpp  zip_entry.cpp
